--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="casak.ru.slimer" >
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.front" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
         android:allowBackup="true"
         android:name=".AppContext"
@@ -10,9 +14,7 @@
         android:theme="@style/AppTheme" >
         <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
         <uses-permission android:name="android.permission.WAKE_LOCK" />
-        <uses-permission android:name="android.permission.CAMERA" />
-        <uses-feature android:name="android.hardware.camera.front" />
-        <uses-feature android:name="android.hardware.camera.autofocus" />
+
         <uses-feature android:name="android.hardware.screen.landscape" />
         <activity
             android:name=".StartActivity"
@@ -24,6 +26,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <receiver android:name=".BootReceiver">
                 <intent-filter >
                     <action android:name="android.intent.action.BOOT_COMPLETED"/>
