--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <receiver android:name=".BootReceiver">
-                <intent-filter >
-                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            <receiver android:name=".BatteryLevelReceiver">
+                <intent-filter android:priority="900">
+                    <action android:name="android.intent.action.BATTERY_LOW" />
+                    <action android:name="android.intent.action.BATTERY_CHANGED" />
+                    <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                    <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 </intent-filter>
             </receiver>
+
         </activity>
 
     </application>
