--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:name=".AppContext"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme" >
-        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-        <uses-permission android:name="android.permission.WAKE_LOCK" />
 
         <uses-feature android:name="android.hardware.screen.landscape" />
         <activity
@@ -26,18 +25,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <receiver android:name=".BatteryLevelReceiver">
-                <intent-filter android:priority="900">
-                    <action android:name="android.intent.action.BATTERY_LOW" />
-                    <action android:name="android.intent.action.BATTERY_CHANGED" />
-                    <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                    <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-                </intent-filter>
-            </receiver>
-
         </activity>
 
     </application>
-
 </manifest>
